style: rename /api/v1 to /rest-api/v1 in core api
