# api/openapispec/swagger.yaml
@@ -145,7 +145,22 @@ definitions:
 info:
   contact: {}
 paths:
-  /api/v1/cluster/{clusterName}:
+  /endpoints:
+    get:
+      consumes:
+      - text/plain
+      description: List all registered endpoints in the router
+      produces:
+      - text/plain
+      responses:
+        "200":
+          description: Endpoints listed successfully
+          schema:
+            type: string
+      summary: List all available endpoints
+      tags:
+      - debug
+  /rest-api/v1/cluster/{clusterName}:
     delete:
       description: This endpoint deletes the cluster resource by name.
       produces:
@@ -316,7 +331,7 @@ paths:
       summary: Update updates the cluster metadata by name.
       tags:
       - cluster
-  /api/v1/cluster/config/file:
+  /rest-api/v1/cluster/config/file:
     post:
       consumes:
       - multipart/form-data
@@ -362,7 +377,7 @@ paths:
       summary: Upload kubeConfig file for cluster
       tags:
       - cluster
-  /api/v1/cluster/config/validate:
+  /rest-api/v1/cluster/config/validate:
     post:
       consumes:
       - text/plain
@@ -405,7 +420,7 @@ paths:
       summary: Validate KubeConfig
       tags:
       - cluster
-  /api/v1/clusters:
+  /rest-api/v1/clusters:
     get:
       description: This endpoint lists all cluster resources.
       parameters:
@@ -457,7 +472,7 @@ paths:
       summary: List lists all cluster resources.
       tags:
       - cluster
-  /api/v1/insight/audit:
+  /rest-api/v1/insight/audit:
     get:
       description: This endpoint audits based on the specified locator.
       parameters:
@@ -515,7 +530,7 @@ paths:
       summary: Audit based on locator.
       tags:
       - insight
-  /api/v1/insight/detail:
+  /rest-api/v1/insight/detail:
     get:
       description: This endpoint returns a Kubernetes resource by name, namespace,
         cluster, apiVersion and kind.
@@ -580,7 +595,7 @@ paths:
         apiVersion and kind.
       tags:
       - insight
-  /api/v1/insight/events:
+  /rest-api/v1/insight/events:
     get:
       description: This endpoint returns events for a Kubernetes resource YAML by
         name, namespace, cluster, apiVersion and kind.
@@ -642,7 +657,7 @@ paths:
         cluster, apiVersion and kind.
       tags:
       - insight
-  /api/v1/insight/score:
+  /rest-api/v1/insight/score:
     get:
       description: This endpoint calculates a score for the provided manifest based
         on the number and severity of issues detected during the audit.
@@ -701,67 +716,7 @@ paths:
       summary: ScoreHandler calculates a score for the audited manifest.
       tags:
       - insight
-  /api/v1/insight/summary:
-    get:
-      description: This endpoint returns a Kubernetes resource summary by name, namespace,
-        cluster, apiVersion and kind.
-      parameters:
-      - description: The specified cluster name, such as 'example-cluster'
-        in: query
-        name: cluster
-        type: string
-      - description: The specified apiVersion, such as 'apps/v1'. Should be percent-encoded
-        in: query
-        name: apiVersion
-        type: string
-      - description: The specified kind, such as 'Deployment'
-        in: query
-        name: kind
-        type: string
-      - description: The specified namespace, such as 'default'
-        in: query
-        name: namespace
-        type: string
-      - description: The specified resource name, such as 'foo'
-        in: query
-        name: name
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Resource Summary
-          schema:
-            $ref: '#/definitions/insight.ResourceSummary'
-        "400":
-          description: Bad Request
-          schema:
-            type: string
-        "401":
-          description: Unauthorized
-          schema:
-            type: string
-        "404":
-          description: Not Found
-          schema:
-            type: string
-        "405":
-          description: Method Not Allowed
-          schema:
-            type: string
-        "429":
-          description: Too Many Requests
-          schema:
-            type: string
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      summary: Get returns a Kubernetes resource summary by name, namespace, cluster,
-        apiVersion and kind.
-      tags:
-      - insight
-  /api/v1/insight/topology:
+  /rest-api/v1/insight/topology:
     get:
       description: This endpoint returns a topology map for a Kubernetes resource
         by name, namespace, cluster, apiVersion and kind.
@@ -823,7 +778,7 @@ paths:
         namespace, cluster, apiVersion and kind.
       tags:
       - insight
-  /api/v1/search:
+  /rest-api/v1/search:
     get:
       description: This endpoint returns an array of Kubernetes runtime Object matched
         using the query from context.
@@ -882,19 +837,64 @@ paths:
         using the query from context.
       tags:
       - search
-  /endpoints:
+  /rest-rest-api/v1/insight/summary:
     get:
-      consumes:
-      - text/plain
-      description: List all registered endpoints in the router
+      description: This endpoint returns a Kubernetes resource summary by name, namespace,
+        cluster, apiVersion and kind.
+      parameters:
+      - description: The specified cluster name, such as 'example-cluster'
+        in: query
+        name: cluster
+        type: string
+      - description: The specified apiVersion, such as 'apps/v1'. Should be percent-encoded
+        in: query
+        name: apiVersion
+        type: string
+      - description: The specified kind, such as 'Deployment'
+        in: query
+        name: kind
+        type: string
+      - description: The specified namespace, such as 'default'
+        in: query
+        name: namespace
+        type: string
+      - description: The specified resource name, such as 'foo'
+        in: query
+        name: name
+        type: string
       produces:
-      - text/plain
+      - application/json
       responses:
         "200":
-          description: Endpoints listed successfully
+          description: Resource Summary
+          schema:
+            $ref: '#/definitions/insight.ResourceSummary'
+        "400":
+          description: Bad Request
           schema:
             type: string
-      summary: List all available endpoints
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "405":
+          description: Method Not Allowed
+          schema:
+            type: string
+        "429":
+          description: Too Many Requests
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get returns a Kubernetes resource summary by name, namespace, cluster,
+        apiVersion and kind.
       tags:
-      - debug
+      - insight
 swagger: "2.0"
